# RacingAI

./: .gitignore  UnityConnection.py  UnityTestCarSteering.py  pyproject.toml
.github/workflows/: build_py.yaml
ML_Racing_Unity/Assets/Animations/: LearnFadeIn.anim  MenuFadeIn.anim
ML_Racing_Unity/Assets/Audio/: MainMixer.mixer
ML_Racing_Unity/Assets/Imports/Kenney/: Kenney Future Narrow SDF.asset  Kenney Future SDF.asset
ML_Racing_Unity/Assets/Materials/: M_Skidmarks.mat  M_Smoke.mat
ML_Racing_Unity/Assets/Prefabs/: Car.prefab  Car_Clear.prefab  DebugCube.prefab  Managers.prefab  PauseMenuPanel.prefab
ML_Racing_Unity/Assets/Prefabs/Road/: Checkpoint.prefab  Road 1.prefab
ML_Racing_Unity/Assets/Scenes/: Main.unity  Main_Clockwise.unity  Main_Counterclockwise.unity  Main_Presentation.unity  Main_Testing.unity  Main_Track.unity  Menu.unity
ML_Racing_Unity/Assets/Scripts/: CameraManager.cs  Checkpoint.cs  CheckpointsManager.cs  PythonManager.cs  TCPConnection.cs
ML_Racing_Unity/Assets/Scripts/AI/: MyAgent.cs  MySensor.cs  ScoreManager.cs
ML_Racing_Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
ML_Racing_Unity/UserSettings/: EditorUserSettings.asset
communication/testing/: test.bat  test_client.py  test_serv.py
nn/: UnityConnection.py  connection.py  pyproject.toml  serve.py
nn/examples/distributed_xor/: xor_client.py  xor_serv.py
nn/nn/: __init__.py  distributed.py  network.py  stats.py
nn/nn/genetic/: pickers.py  pool.py
nn/nn/layers/: dense.py
nn/saves/: gen1870.ntp  gen680.ntp
(+30 files in other folders)
